Removed useless buttons. Changed existing ones.
The logo now points to the course calendar.

--- a/frontend/src/app/admin/admin-base.component.html
+++ b/frontend/src/app/admin/admin-base.component.html
@@ -2,13 +2,12 @@
   <div id="nav-container">
     <nav>
       <ul>
-        <nav-item href="/admin" linkText="Home"></nav-item>
         <nav-item href="/admin/courses/calendar" linkText="Courses"></nav-item>
-        <nav-item href="/admin/settings" linkText="Settings"></nav-item>
+        <nav-item href="/sign-up" linkText="Sign-up"></nav-item>
       </ul>
     </nav>
 
-    <a [routerLink]="['/admin']" title="Admin homepage">
+    <a [routerLink]="['/admin/courses/calendar']" title="Courses calendar">
       <img id="logo" src="/assets/images/header.png" title="Leeds University Skydivers" alt="Leeds University Skydivers logo">
     </a>
   </div>
