--- a/frontend/src/app/admin/courses/course-calendar/course-calendar.component.html
+++ b/frontend/src/app/admin/courses/course-calendar/course-calendar.component.html
@@ -1,4 +1,4 @@
-<div id="full-column">
+<div id="sl-course-calendar-container">
   <h2>Static line course calendar</h2>
 
   <div class="sl-course-calendar-navigation">
