--- a/frontend/src/app/admin/member-search/member-search.component.sass
+++ b/frontend/src/app/admin/member-search/member-search.component.sass
@@ -1,3 +1,8 @@
+@import '../../../assets/css/bourbon/bourbon'
+@import '../../../assets/css/base/base'
+@import '../../../assets/css/neat/neat'
+@import '../../../assets/css/variables'
+
 #member-search-button, #member-search-term
   display: inline-block
 
