--- a/frontend/src/app/admin/courses/course-view/course-view.component.sass
+++ b/frontend/src/app/admin/courses/course-view/course-view.component.sass
@@ -1,3 +1,17 @@
+@import '../../../../assets/css/bourbon/bourbon'
+@import '../../../../assets/css/base/base'
+@import '../../../../assets/css/neat/neat'
+@import '../../../../assets/css/variables'
+
+#course-view
+  @include span-columns(12)
+  background: white
+  padding: 0.8rem
+  border-radius: 0.4rem
+
+  h2
+    margin-bottom: 0.1em
+
 #sl-course-info
   margin: 0.5em 0 1em 0
 
