Cosmetic changes and small fixes.

--- a/frontend/src/app/pages/about/about.component.html
+++ b/frontend/src/app/pages/about/about.component.html
@@ -7,21 +7,22 @@
 </div>
 
 <p>
-  The Leeds University Skydiving Society is part of the Outdoor Societies at the Leeds University Union. We welcome
-  members from all Leeds and surrounding Universities, including Alumnis.
+  The Leeds University Skydiving Society is part of the outdoor societies at the Leeds University Union. We welcome
+  members from all Leeds and surrounding universities, including alumni.
 </p>
 
 <p>
   Our current home dropzone is <a href="http://www.britishparachuteschools.com/">BPS Langar</a>, situated just outside
   of Nottingham. The dropzone is the largest civilian dropzone in the UK, hosting tandems and fun jumpers every day of
   the year (except Christmas Day). The dropzone also hosts Nottingham, Birmingham, Warwick and Loughborough University
-  Skydiving Teams, ensuring there are always lots of new students to meet.
+  skydiving teams, ensuring there are always lots of new students to meet.
 </p>
 
 <p>
   We are held together as a club by our passion for all avenues of the sport; becoming a member means being welcomed into
   a club that will help you from your first jump to your 1000th. The club is very sociable, hosting weekly events at
-  varying locations (check our facebook if you want to find out more).
+  varying locations (check <a href="https://www.facebook.com/groups/shockabrah">our Facebook</a> if you want to find out
+  more).
 </p>
 
 <p>
