--- a/frontend/src/app/pages/contact/contact.component.html
+++ b/frontend/src/app/pages/contact/contact.component.html
@@ -13,8 +13,8 @@
       </a>
     </dt>
     <dd>
-      Join our group and a member of the committee should message you letting you know about how to get involved with the club.
-      Make sure that you check your <strong>'Other'</strong> folder as that's where it will most likely end up!
+      Join our group and a member of the committee should message you letting you know about how to get involved with
+      the club. Make sure that you check your <strong>'Other'</strong> folder as that's where it will most likely end up!
 
       Post in the group or message a member of the committee (see the list on the right).
     </dd>
@@ -25,10 +25,10 @@
         Twitter
       </a>
     </dt>
-
     <dd>
       Tweet us a question!
     </dd>
+
     <dt>
       <a href="https://www.facebook.com/leedsuniskydivers">
         <i class="fa fa-facebook-square"></i>
