--- a/frontend/src/app/pages/faq/faq.component.html
+++ b/frontend/src/app/pages/faq/faq.component.html
@@ -17,7 +17,7 @@
           How much does it cost to join?
         </h4>
 
-        <p>£35.00 for the year, entitling you to cheaper socials, jump ticket deals and kit hire rates.</p>
+        <p>&pound;30.00 for the year, entitling you to cheaper socials, jump tickets and the ability to hire club parachutes.</p>
       </li>
 
       <li>
@@ -28,9 +28,9 @@
         </h4>
 
         <p>
-          We recommend coming along to one of our socials (check the facebook group to find out when and where). After
-          you've decided you were right, skydiving is the best idea ever, you can buy membership on the
-          <a href="http://www.leedsuniversityunion.org.uk/groups/skydiving/"
+          We recommend coming along to one of our socials (check the <a href="https://www.facebook.com/groups/shockabrah">
+          Facebook group</a> to find out when and where). After you've decided you were right, skydiving is the best
+          idea ever, you can buy membership on the <a href="http://www.leedsuniversityunion.org.uk/groups/skydiving/"
              title="Skydiving on the Leeds University Union website.">Union page</a>.
         </p>
       </li>
@@ -70,8 +70,8 @@
         </h4>
 
         <p>
-          Skydiving is an 'extreme' sport and with every extreme sport there are risks posed. However, there are
-          measures taken to reduce these risks.
+          Skydiving is an 'extreme' sport and with every extreme sport there are risks. However, there are many measures
+          taken to reduce these risks.
         </p>
 
         <p>
@@ -144,7 +144,7 @@
           How much is the initial training fee?
         </h4>
 
-        <p>£175.00 – this includes <strong>two jumps</strong> and all your training!</p>
+        <p>&pound;175.00 – this includes one skydive and all of your training!</p>
       </li>
 
       <li>
@@ -155,8 +155,8 @@
         </h4>
 
         <p>
-          Every person is different and takes a slighly different amount of time to learn to skydive. The minimum is 28
-          jumps and most people take around 28-35.
+          Every person is different and takes a slightly different amount of time to learn to skydive. The minimum is 18
+          jumps and most people take around 20-35.
         </p>
       </li>
     </ul>
