--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div id="intro-snippet">
   <p>
-    <a href="http://www.leedsuniversityunion.org.uk/groups/skydiving/" title="Join us now">Join us now</a> and start skydiving for just £175!
+    <a href="http://www.leedsuniversityunion.org.uk/groups/skydiving/" title="Join us now">Join us now</a> and start skydiving for just &pound;175!
   </p>
 </div>
 
