Changed link to Calendar.

--- a/frontend/src/app/admin/admin-base.component.html
+++ b/frontend/src/app/admin/admin-base.component.html
@@ -2,7 +2,7 @@
   <div id="nav-container">
     <nav>
       <ul>
-        <nav-item href="/admin/courses/calendar" linkText="Courses"></nav-item>
+        <nav-item href="/admin/courses/calendar" linkText="Calendar"></nav-item>
         <nav-item href="/sign-up" linkText="Sign-up"></nav-item>
       </ul>
     </nav>
