--- a/frontend/src/app/admin/courses/course-calendar/course-calendar.component.sass
+++ b/frontend/src/app/admin/courses/course-calendar/course-calendar.component.sass
@@ -15,6 +15,7 @@ h2
   margin-bottom: 0.1em
 
 #sl-course-calendar
+  clear: both
   margin-top: 0.7em
   border: $tile-borders
   background: #fff
@@ -69,3 +70,8 @@ h2
 
 #calendar-filter-month
   width: auto
+
+#add-course-btn
+  display: inline-block
+  float: right
+  margin-top: -2.5em
