--- a/frontend/src/app/admin/utils/nav.component.html
+++ b/frontend/src/app/admin/utils/nav.component.html
@@ -1,3 +1,3 @@
 <li role="presentation">
-  <a [routerLink]="href" [innerText]="linkText" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"></a>
+  <a [routerLink]="href" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">{{ linkText }}</a>
 </li>
