Fixed mass texts form not having white background.

--- a/frontend/src/app/admin/mass-text/mass-text.component.sass
+++ b/frontend/src/app/admin/mass-text/mass-text.component.sass
@@ -1,3 +1,14 @@
+@import '../../../assets/css/bourbon/bourbon'
+@import '../../../assets/css/base/base'
+@import '../../../assets/css/neat/neat'
+@import '../../../assets/css/variables'
+
+#mass-text-container
+  @include span-columns(12)
+  background: white
+  padding: 0.8rem
+  border-radius: 0.4rem
+
 #mass-text-preview
   min-height: 2em
   width: 100%
