--- a/frontend/src/app/admin/courses/course-calendar/tile/tile.component.html
+++ b/frontend/src/app/admin/courses/course-calendar/tile/tile.component.html
@@ -9,7 +9,7 @@
       <span class="course-word-spaces">Full</span> ({{course.totalSpaces}})
     </div>
     <div class="sl-course-calendar-tile-info course-spaces" title="{{course.spacesFree}} Spaces left on this course" *ngIf="course.spacesFree >= 1">
-      <a [routerLink]="['/admin/courses/', course.course.uuid]">{{course.spacesFree}}/{{course.totalSpaces}} <span class="course-word-spaces">Spaces</span></a>
+      <a [routerLink]="['/admin/courses/', course.course.uuid]">{{course.spacesFree}}/{{course.totalSpaces}} <span class="course-word-spaces">Free</span></a>
     </div>
   </div>
 </div>
