Added London uni to about.

--- a/frontend/src/app/pages/about/about.component.html
+++ b/frontend/src/app/pages/about/about.component.html
@@ -14,8 +14,8 @@
 <p>
   Our current home dropzone is <a href="http://www.britishparachuteschools.com/">BPS Langar</a>, situated just outside
   of Nottingham. The dropzone is the largest civilian dropzone in the UK, hosting tandems and fun jumpers every day of
-  the year (except Christmas Day). The dropzone also hosts Nottingham, Birmingham, Warwick and Loughborough University
-  skydiving teams, ensuring there are always lots of new students to meet.
+  the year (except Christmas Day). The dropzone also hosts Nottingham, Birmingham, Warwick, London and Loughborough
+  University skydiving clubs, ensuring there are always lots of new students to meet.
 </p>
 
 <p>
