--- a/frontend/src/app/admin/admin-base.component.html
+++ b/frontend/src/app/admin/admin-base.component.html
@@ -3,7 +3,7 @@
     <nav>
       <ul>
         <nav-item href="/admin/courses/calendar" linkText="Calendar"></nav-item>
-        <nav-item href="/sign-up" linkText="Sign-up"></nav-item>
+        <nav-item href="/admin/sign-up" linkText="Sign-up"></nav-item>
       </ul>
     </nav>
 
