--- a/frontend/src/app/admin/courses/course-view/course-view.component.sass
+++ b/frontend/src/app/admin/courses/course-view/course-view.component.sass
@@ -63,7 +63,10 @@ $sl-course-students-border: solid 0.08em #ccc
 #sl-course-students-options
   width: 15%
 
-.sl-course-students-remove, .sl-course-students-contact, .sl-course-students-edit-member, .sl-course-students-add-member
+#sl-course-students-view-member
+  padding: 0.5em 0.8em
+
+.sl-course-students-remove, .sl-course-students-edit-member, .sl-course-students-add-member
   padding: 0.5em
 
 $add-member-bg: lighten(green, 4%)
