--- a/frontend/src/assets/css/bourbon/addons/_buttons.scss
+++ b/frontend/src/assets/css/bourbon/addons/_buttons.scss
@@ -48,7 +48,8 @@
 ///
 /// @todo Remove double assigned variables (Lines 59–62) in v5.0.0
 
-$buttons-list: 'button',
+$buttons-list: 'a.button',
+               'button',
                'input[type="button"]',
                'input[type="reset"]',
                'input[type="submit"]';
