--- a/frontend/src/app/admin/admin-base.component.html
+++ b/frontend/src/app/admin/admin-base.component.html
@@ -4,6 +4,7 @@
       <ul>
         <nav-item href="/admin/courses/calendar" linkText="Calendar"></nav-item>
         <nav-item href="/admin/mass-text" linkText="Mass text"></nav-item>
+        <nav-item href="/admin/members/lookup" linkText="Member lookup"></nav-item>
         <nav-item href="/admin/sign-up" linkText="Sign-up"></nav-item>
       </ul>
     </nav>
