Added status specific stylings for texts.

--- a/frontend/src/app/admin/member-view/member-view.component.html
+++ b/frontend/src/app/admin/member-view/member-view.component.html
@@ -55,7 +55,7 @@
         <dd>{{ textMessage.fromNumber }}</dd>
 
         <dt>Message</dt>
-        <dd class="text-message-content">{{ textMessage.message }}</dd>
+        <dd class="text-message-content text-message-status-{{textMessage.status}}">{{ textMessage.message }}</dd>
       </dl>
 
       <div style="clear: left"></div>
