--- a/frontend/src/app/admin/member-view/member-view.component.sass
+++ b/frontend/src/app/admin/member-view/member-view.component.sass
@@ -45,10 +45,21 @@ h3
   dd.text-message-content
     width: 100%
     padding: 0.5em
-    background: #eee
 
   dt:after
     content: ':'
 
   dt
     margin-right: 0.7em
+
+.text-message-status-0
+  background: #fff8cf
+
+.text-message-status-1
+  background: #eee
+
+.text-message-status-2
+  background: #ffa69e
+
+.text-message-status-3
+  background: #c3c5ff
