Added member info complete check. Removed registered with Langar column.

--- a/frontend/src/app/admin/courses/course-view/course-view.component.sass
+++ b/frontend/src/app/admin/courses/course-view/course-view.component.sass
@@ -54,10 +54,7 @@ $sl-course-students-border: solid 0.08em #ccc
 #sl-course-students-info-complete
   width: 10%
 
-#sl-course-students-forms-complete
-  width: 10%
-
-#sl-course-students-reg-langar
+#sl-course-students-deposit-paid
   width: 10%
 
 #sl-course-students-options
@@ -87,7 +84,7 @@ $add-member-bg: lighten(green, 4%)
       width: 100%
 
   .sl-course-students-number, .sl-course-students-name, .sl-course-students-date-joined, .sl-course-students-info-complete,
-  .sl-course-students-forms-complete, .sl-course-students-reg-langar, .sl-course-students-options
+  .sl-course-students-deposit-paid, .sl-course-students-options
     &:before
       font-weight: bold
       margin-right: 0.5em
@@ -107,8 +104,5 @@ $add-member-bg: lighten(green, 4%)
   .sl-course-students-info-complete:before
     content: 'Info complete:'
 
-  .sl-course-students-forms-complete:before
-    content: 'Forms complete:'
-
-  .sl-course-students-reg-langar:before
-    content: 'Reg. /w Langar:'
+  .sl-course-students-deposit-paid:before
+    content: 'Deposit paid:'
