--- a/frontend/src/app/admin/courses/course-view/course-view.component.html
+++ b/frontend/src/app/admin/courses/course-view/course-view.component.html
@@ -29,8 +29,7 @@
         <th id="sl-course-students-name">Name</th>
         <th id="sl-course-students-date-joined">Date joined</th>
         <th id="sl-course-students-info-complete">Info complete</th>
-        <th id="sl-course-students-forms-complete">Forms complete</th>
-        <th id="sl-course-students-reg-langar">Reg. /w Langar</th>
+        <th id="sl-course-students-deposit-paid">Deposit paid</th>
         <th id="sl-course-students-options">Options</th>
       </tr>
     </thead>
@@ -43,20 +42,18 @@
         <td class="sl-course-students-name" *ngIf="space.member">
           {{ space.member?.firstName }} {{ space.member?.lastName }}
         </td>
-        <td class="sl-course-students-name" colspan="6" *ngIf="!space.member">
+        <td class="sl-course-students-name" colspan="5" *ngIf="!space.member">
           N/A
         </td>
         <td class="sl-course-students-date-joined" *ngIf="space.member">
           {{ space.member?.createdAt?.format('YYYY-MM-DD') || '' }}
         </td>
         <td class="sl-course-students-info-complete" *ngIf="space.member">
-          <i class="fa fa-times" aria-hidden="true" style="color: red;"></i>
+          <i class="fa fa-check" aria-hidden="true" style="color: green;" *ngIf="space.member.infoComplete()"></i>
+          <i class="fa fa-times" aria-hidden="true" style="color: red;" *ngIf="!space.member.infoComplete()"></i>
         </td>
-        <td class="sl-course-students-forms-complete" *ngIf="space.member">
-          <i class="fa fa-check" aria-hidden="true" style="color: green;"></i>
-        </td>
-        <td class="sl-course-students-reg-langar" *ngIf="space.member">
-          <i class="fa fa-times" aria-hidden="true" style="color: red;"></i>
+        <td class="sl-course-students-deposit-paid" *ngIf="space.member">
+          <i class="fa fa-question" aria-hidden="true" style="color: orange;"></i>
         </td>
         <td class="sl-course-students-options" *ngIf="space.member">
           <a [routerLink]="['/admin', 'members', space.member.uuid]" title="View member information" id="sl-course-students-view-member" class="button">
