Fixed last jump field.

--- a/frontend/src/app/admin/member-edit/member-edit.component.html
+++ b/frontend/src/app/admin/member-edit/member-edit.component.html
@@ -40,7 +40,7 @@
 
     <div>
       <label for="last-jump">Last jump</label>
-      <input type="date" id="last-jump" formControlName="lastName" value="">
+      <input type="date" id="last-jump" formControlName="lastJump" value="">
 
       <div [hidden]="ctrlLastName.valid || ctrlLastName.untouched" class="form-field-error" id="last-jump-form-field-error">
         Please enter a valid date (or clear this field)
