--- a/frontend/src/app/admin/courses/course-view/course-view.component.sass
+++ b/frontend/src/app/admin/courses/course-view/course-view.component.sass
@@ -60,10 +60,7 @@ $sl-course-students-border: solid 0.08em #ccc
 #sl-course-students-options
   width: 15%
 
-#sl-course-students-view-member
-  padding: 0.5em 0.8em
-
-.sl-course-students-remove, .sl-course-students-edit-member, .sl-course-students-add-member
+.sl-course-students-remove, a.sl-course-students-edit-member, .sl-course-students-add-member, a.sl-course-students-view-member
   padding: 0.5em
 
 $add-member-bg: lighten(green, 4%)
