Changed new course text to a button.

--- a/frontend/src/app/admin/courses/course-calendar/course-calendar.component.html
+++ b/frontend/src/app/admin/courses/course-calendar/course-calendar.component.html
@@ -2,7 +2,7 @@
   <h2>Static line course calendar</h2>
 
   <p>
-    <a id="add-course-btn" [routerLink]="['/admin', 'courses', 'add']">
+    <a id="add-course-btn" class="button" [routerLink]="['/admin', 'courses', 'add']">
       <i class="fa fa-plus-circle"></i> New course
     </a>
   </p>
