Made the member view button larger.

--- a/frontend/src/app/admin/courses/course-view/course-view.component.sass
+++ b/frontend/src/app/admin/courses/course-view/course-view.component.sass
@@ -60,7 +60,10 @@ $sl-course-students-border: solid 0.08em #ccc
 #sl-course-students-options
   width: 15%
 
-.sl-course-students-remove, a.sl-course-students-edit-member, .sl-course-students-add-member, a.sl-course-students-view-member
+a.sl-course-students-view-member
+  padding: 0.5em 0.7em
+
+.sl-course-students-remove, a.sl-course-students-edit-member, .sl-course-students-add-member
   padding: 0.5em
 
 $add-member-bg: lighten(green, 4%)
