Moved member services into one service.

--- a/frontend/src/app/admin/member/member-view/member-view.component.sass
+++ b/frontend/src/app/admin/member/member-view/member-view.component.sass
@@ -1,7 +1,7 @@
-@import '../../../assets/css/bourbon/bourbon'
-@import '../../../assets/css/base/base'
-@import '../../../assets/css/neat/neat'
-@import '../../../assets/css/variables'
+@import '../../../../assets/css/bourbon/bourbon'
+@import '../../../../assets/css/base/base'
+@import '../../../../assets/css/neat/neat'
+@import '../../../../assets/css/variables'
 
 dt, dd
   display: block
