--- a/frontend/src/app/admin/member/member-edit/member-edit.component.sass
+++ b/frontend/src/app/admin/member/member-edit/member-edit.component.sass
@@ -3,7 +3,7 @@
 @import '../../../../assets/css/neat/neat'
 @import '../../../../assets/css/variables'
 
-#member-lookup
+#member-edit
   @include span-columns(12)
   background: white
   padding: 0.8rem
