--- a/frontend/src/app/admin/member/member-search/member-search.component.sass
+++ b/frontend/src/app/admin/member/member-search/member-search.component.sass
@@ -1,7 +1,7 @@
-@import '../../../assets/css/bourbon/bourbon'
-@import '../../../assets/css/base/base'
-@import '../../../assets/css/neat/neat'
-@import '../../../assets/css/variables'
+@import '../../../../assets/css/bourbon/bourbon'
+@import '../../../../assets/css/base/base'
+@import '../../../../assets/css/neat/neat'
+@import '../../../../assets/css/variables'
 
 #member-search-button, #member-search-term
   display: inline-block
