Various fixes & cleanups.

--- a/frontend/src/app/admin/admin-base.component.html
+++ b/frontend/src/app/admin/admin-base.component.html
@@ -2,10 +2,10 @@
   <div id="nav-container">
     <nav>
       <ul>
-        <nav-item href="/admin/courses/calendar" linkText="Calendar"></nav-item>
-        <nav-item href="/admin/mass-text" linkText="Mass text"></nav-item>
-        <nav-item href="/admin/members/lookup" linkText="Member lookup"></nav-item>
-        <nav-item href="/admin/sign-up" linkText="Sign-up"></nav-item>
+        <lsd-nav-item href="/admin/courses/calendar" linkText="Calendar"></lsd-nav-item>
+        <lsd-nav-item href="/admin/mass-text" linkText="Mass text"></lsd-nav-item>
+        <lsd-nav-item href="/admin/members/lookup" linkText="Member lookup"></lsd-nav-item>
+        <lsd-nav-item href="/admin/sign-up" linkText="Sign-up"></lsd-nav-item>
       </ul>
     </nav>
 
