--- a/frontend/src/app/admin/courses/course-calendar/course-calendar.component.html
+++ b/frontend/src/app/admin/courses/course-calendar/course-calendar.component.html
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <calendar-tile *ngFor="let tile of tiles" [tile]="tile"></calendar-tile>
+    <lsd-calendar-tile *ngFor="let tile of tiles" [tile]="tile"></lsd-calendar-tile>
 
     <div class="clear"></div>
   </div>
