--- a/frontend/src/app/admin/signup/signup-base.component.html
+++ b/frontend/src/app/admin/signup/signup-base.component.html
@@ -3,8 +3,8 @@
     <div id="small-header">
       <nav>
         <ul>
-          <nav-item href="/admin/sign-up" linkText="Main"></nav-item>
-          <nav-item href="/admin/sign-up/alt" linkText="Alt"></nav-item>
+          <lsd-nav-item href="/admin/sign-up" linkText="Main"></lsd-nav-item>
+          <lsd-nav-item href="/admin/sign-up/alt" linkText="Alt"></lsd-nav-item>
         </ul>
       </nav>
 
