Loads of test fixes & style cleanups.

--- a/frontend/src/app/pages/base/base.component.html
+++ b/frontend/src/app/pages/base/base.component.html
@@ -32,11 +32,11 @@
       </a>
     </li>
 
-    <page-nav-item href="/" linkText="Home" [collapsed]="menuCollapsed"></page-nav-item>
-    <page-nav-item href="/about-the-club" linkText="About the club" [collapsed]="menuCollapsed"></page-nav-item>
-    <page-nav-item href="/committee" linkText="Committee" [collapsed]="menuCollapsed"></page-nav-item>
-    <page-nav-item href="/prices" linkText="Prices" [collapsed]="menuCollapsed"></page-nav-item>
-    <page-nav-item href="/faq" linkText="FAQ" [collapsed]="menuCollapsed"></page-nav-item>
+    <lsd-page-nav-item href="/" linkText="Home" [collapsed]="menuCollapsed"></lsd-page-nav-item>
+    <lsd-page-nav-item href="/about-the-club" linkText="About the club" [collapsed]="menuCollapsed"></lsd-page-nav-item>
+    <lsd-page-nav-item href="/committee" linkText="Committee" [collapsed]="menuCollapsed"></lsd-page-nav-item>
+    <lsd-page-nav-item href="/prices" linkText="Prices" [collapsed]="menuCollapsed"></lsd-page-nav-item>
+    <lsd-page-nav-item href="/faq" linkText="FAQ" [collapsed]="menuCollapsed"></lsd-page-nav-item>
 
     <li>
       <i class="separator fa fa-ellipsis-v"></i>
@@ -48,7 +48,7 @@
       </a>
     </li>
 
-    <page-nav-item href="/contact" linkText="Contact" [collapsed]="menuCollapsed"></page-nav-item>
+    <lsd-page-nav-item href="/contact" linkText="Contact" [collapsed]="menuCollapsed"></lsd-page-nav-item>
 
     <li>
       <i class="separator fa fa-ellipsis-v"></i>
