More specs for course view.
Changed the main info box to be hidden rather than shown with loading
course info.

--- a/frontend/src/app/admin/courses/course-view/course-view.component.html
+++ b/frontend/src/app/admin/courses/course-view/course-view.component.html
@@ -1,7 +1,7 @@
 <div id="course-view">
   <h2>Static line course</h2>
 
-  <dl id="sl-course-info">
+  <dl id="sl-course-info" *ngIf="course !== null">
     <dt>Date</dt>
     <dd>{{ formatDate(course?.course?.date) }}</dd>
 
